--- a/tools/build.config.json
+++ b/tools/build.config.json
@@ -7,7 +7,8 @@
     "use-cases",
     "workflow",
     "assistant",
-    "styles"
+    "styles",
+    "adaptation"
   ],
   "output": "index.html",
   "description": "Star-UI Build Configuration - Define section loading order"
