--- a/tools/build.config.json
+++ b/tools/build.config.json
@@ -8,7 +8,8 @@
     "workflow",
     "assistant",
     "styles",
-    "adaptation"
+    "adaptation",
+    "APIs"
   ],
   "output": "index.html",
   "description": "Star-UI Build Configuration - Define section loading order"
