--- a/tools/build.solutions.config.json
+++ b/tools/build.solutions.config.json
@@ -5,11 +5,10 @@
     "links",
     "ai_creative_suite",
     "ROI",
-    "workflow",
+    "workflow_sl",
     "calculator",
     "footer"
   ],
   "output": "solutions.html",
   "description": "Star-UI Build Configuration - Solutions page sections"
 }
-
