添加use_cases和banner的文本描述框

--- a/tools/build.solutions.config.json
+++ b/tools/build.solutions.config.json
@@ -3,9 +3,10 @@
     "navigation",
     "ai_solutions",
     "links",
+    "adaptation",
     "ai_creative_suite",
     "ROI",
-    "workflow",
+    "use-cases",
     "calculator",
     "footer"
   ],
