tool-cases模块重命名eclipses engine

--- a/tools/build.config.json
+++ b/tools/build.config.json
@@ -3,7 +3,7 @@
     "navigation",
     "banner",
     "links",
-    "tools-showcase",
+    "eclipses-engine",
     "use-cases",
     "workflow",
     "assistant",
