主页字体修改

--- a/tools/build.config.json
+++ b/tools/build.config.json
@@ -15,6 +15,7 @@
     "question",
     "footer"
   ],
+  "bodyClass": "page-index",
   "output": "index.html",
   "description": "Star-UI Build Configuration - Define section loading order"
 }
